Add Volume control for each tab

--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,10 @@
 </head>
 <body>
   <button id="muteButton">Mute/Unmute Tab</button>
+  <button id="muteAllButton">Mute All Tabs</button>
+  <button id="unmuteAllButton">Unmute All Tabs</button>
+  <input type="range" id="volumeInput" min="0" max="1" step="0.01" value="1">
+  <button id="setVolumeButton">Set Volume</button>
   <script src="popup.js"></script>
 </body>
 </html>
